tests/paczka1/fuzzy1/36422341.err
Error in line 1: 1TFOlJepm A45 87,1
Error in line 14: VhOukLnie SW70 69,5
Error in line 8: 712p A45 26,1
Error in line 9: 1TFOlJepm A724 91,5
Error in line 25: VhOukLnie A724 89,9
Error in line 28: 712p A45 58,5
